logs/dag_id=second_dag/run_id=scheduled__2021-01-21T00:00:00+00:00/task_id=save_data_task/attempt=1.log
[2025-06-01T15:54:15.613+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: second_dag.save_data_task scheduled__2021-01-21T00:00:00+00:00 [queued]>
[2025-06-01T15:54:15.632+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: second_dag.save_data_task scheduled__2021-01-21T00:00:00+00:00 [queued]>
[2025-06-01T15:54:15.632+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 3
[2025-06-01T15:54:15.662+0000] {taskinstance.py:1327} INFO - Executing <Task(PythonOperator): save_data_task> on 2021-01-21 00:00:00+00:00
[2025-06-01T15:54:15.682+0000] {standard_task_runner.py:57} INFO - Started process 27341 to run task
[2025-06-01T15:54:15.688+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'second_dag', 'save_data_task', 'scheduled__2021-01-21T00:00:00+00:00', '--job-id', '1150', '--raw', '--subdir', 'DAGS_FOLDER/my_second_dag.py', '--cfg-path', '/tmp/tmpy4chcht_']
[2025-06-01T15:54:15.696+0000] {standard_task_runner.py:85} INFO - Job 1150: Subtask save_data_task
[2025-06-01T15:54:15.774+0000] {task_command.py:410} INFO - Running <TaskInstance: second_dag.save_data_task scheduled__2021-01-21T00:00:00+00:00 [running]> on host 27c4b93144a0
[2025-06-01T15:54:16.005+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='second_dag' AIRFLOW_CTX_TASK_ID='save_data_task' AIRFLOW_CTX_EXECUTION_DATE='2021-01-21T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2021-01-21T00:00:00+00:00'
[2025-06-01T15:54:16.015+0000] {my_second_dag.py:51} INFO - Fetching value USD: 73.355
[2025-06-01T15:54:16.021+0000] {base.py:73} INFO - Using connection ID 'pg_database' for task execution.
[2025-06-01T15:54:16.030+0000] {logging_mixin.py:150} WARNING - /home/***/.local/lib/python3.7/site-packages/***/utils/context.py:313 AirflowContextDeprecationWarning: Accessing 'execution_date' from the template is deprecated and will be removed in a future version. Please use 'data_interval_start' or 'logical_date' instead.
[2025-06-01T15:54:16.031+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1911, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "T00"
LINE 1: ... usd_to_rub_rates (date, value) VALUES (2021-01-21T00:00:00+...
                                                             ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/my_second_dag.py", line 64, in save_data_to_db
    text(f"INSERT INTO usd_to_rub_rates (date, value) VALUES ({execution_date}, {data})")
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1385, in execute
    return meth(self, multiparams, params, _EMPTY_EXECUTION_OPTS)
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/sql/elements.py", line 335, in _execute_on_connection
    self, multiparams, params, execution_options
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1587, in _execute_clauseelement
    cache_hit=cache_hit,
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1954, in _execute_context
    e, statement, parameters, cursor, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 2135, in _handle_dbapi_exception
    sqlalchemy_exception, with_traceback=exc_info[2], from_=e
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1911, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near "T00"
LINE 1: ... usd_to_rub_rates (date, value) VALUES (2021-01-21T00:00:00+...
                                                             ^

[SQL: INSERT INTO usd_to_rub_rates (date, value) VALUES (2021-01-21T00:00:00+00:00, 73.355)]
(Background on this error at: https://sqlalche.me/e/14/f405)
[2025-06-01T15:54:16.039+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=second_dag, task_id=save_data_task, execution_date=20210121T000000, start_date=20250601T155415, end_date=20250601T155416
[2025-06-01T15:54:16.050+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 1150 for task save_data_task ((psycopg2.errors.SyntaxError) syntax error at or near "T00"
LINE 1: ... usd_to_rub_rates (date, value) VALUES (2021-01-21T00:00:00+...
                                                             ^

[SQL: INSERT INTO usd_to_rub_rates (date, value) VALUES (2021-01-21T00:00:00+00:00, 73.355)]
(Background on this error at: https://sqlalche.me/e/14/f405); 27341)
[2025-06-01T15:54:16.070+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2025-06-01T15:54:16.085+0000] {taskinstance.py:2653} INFO - 0 downstream tasks scheduled from follow-on schedule check
